# pouch-db-backup-scripts

./: download-backups.sh  install.sh  pyproject.toml  restore.sh  save-backups.sh  setup-cron.sh  setup.sh
src/: configs.py  download_backups.py  main.py  save_backups.py
